<resources>
    <string name="app_name">Youtise Player</string>
    <string name="password_hint">Enter OTP Code</string>
    <string name="location_hint">Select Location</string>
    <string name="email_hint">Enter email address</string>
    <string name="submit_email">Submit Email</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="downloading">Downloading …</string>
    <string name="settings">Settings</string>
    <string name="unique_id">Unique ID</string>
    <string name="actions">Actions</string>
    <string name="company_name">Something Inc</string>
    <string name="company_email">info@somethinginc.com</string>
    <string name="player">Media Player</string>
    <string name="factory_reset">Delete All Data</string>
    <string name="refresh">Refresh Playlist</string>
    <string name="view_adverts">Current Playlist</string>
    <string name="download_progress_count">Downloaded %d</string>
    <string name="logout_hint">Delete session and local data. Logout</string>
    <string name="player_id"/>
    <string name="playlist">Current Playing Media</string>
    <string name="loading">Loading ...</string>
</resources>
