<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item android:id="@+id/nav_player"
              android:icon="@drawable/ic_media_player"
              android:title="@string/player" />

        <item android:id="@+id/nav_advert_playlist"
              android:icon="@drawable/ic_advert_playlist"
              android:title="@string/view_adverts" />

        <item android:id="@+id/nav_settings"
              android:icon="@drawable/ic_settings"
              android:title="@string/settings" />
    </group>

    <item android:title="@string/actions">
        <menu>
            <item android:id="@+id/nav_refresh"
                  android:icon="@drawable/ic_refresh"
                  android:title="@string/refresh" />
            <item android:id="@+id/nav_logout"
                  android:icon="@drawable/ic_factory_reset"
                  android:tooltipText="@string/logout_hint"
                  android:title="@string/logout" />
        </menu>
    </item>
</menu>