<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.EmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcomeImage_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/app_white"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login_container">

        <ImageView
                android:contentDescription="@string/company_name"
                android:src="@drawable/youtise_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logo_imageView"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="@id/welcomeImage_container"
                app:layout_constraintStart_toStartOf="@id/welcomeImage_container"
                app:layout_constraintBottom_toBottomOf="@id/welcomeImage_container"
                app:layout_constraintEnd_toEndOf="@id/welcomeImage_container"
                app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_container"
                android:hint="@string/email_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/mButton_email"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="88dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintStart_toStartOf="@id/login_container"
                app:layout_constraintEnd_toEndOf="@id/login_container"
                app:layout_constraintBottom_toTopOf="@+id/mButton_email"
                app:layout_constraintTop_toTopOf="@id/login_container">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/mButton_email"
                android:text="@string/submit_email"
                android:enabled="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:nextFocusUp="@id/textInput_email"
                app:layout_constraintStart_toStartOf="@id/login_container"
                app:layout_constraintEnd_toEndOf="@id/login_container"
                app:layout_constraintTop_toBottomOf="@id/textInput_container"
                android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>